# warrant-mcp

./: README.md  pyproject.toml
.claude/agents/: argue.md  debate.md  deliberate.md  feature-planner.md  post-dev-validator.md  spec-test-writer.md  spec-updater.md
.claude/skills/: argue.md  debate.md  deliberate.md
src/warrant_mcp/: __init__.py  server.py
src/warrant_mcp/core/: aspic.py  bipolar.py  dung.py  gradual.py  pollock.py  prakken.py  toulmin.py  types.py  walton.py
tests/: test_dung.py  test_gradual.py  test_pollock.py  test_prakken.py  test_toulmin.py
