[project]
name = "warrant-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jayden", email = "abys7free@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.26.0",
]

[project.scripts]
warrant-mcp = "warrant_mcp:main"

[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
